--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.25)
 project(k-means-in-C LANGUAGES C)
 
 set(CMAKE_C_STANDARD 90)
+add_compile_options(-O3)
 
 add_executable(k-means-in-C  src/main.c src/help.h src/help.c src/kmeans.h src/kmeans.c)
 
